Fix or suppress Java-related warnings in the engine build process (#11858)
* warning suppression

* fix more java warnings

* review fix

* fix typo

* Revert "review fix"

This reverts commit 90c33d3e698edb537800f0b9816309517f28037d.